--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "crud-api",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "start": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "uuid": "^10.0.0"
   },
@@ -18,6 +19,7 @@
     "@types/node": "^22.7.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
 }
