--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "crud-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "ts-node-dev src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "ts-node-dev src/server.ts",
+    "start:prod": "tsc && node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "@gogicha007",
