--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "crud-api",
   "version": "1.0.0",
-  "main": "server.ts",
+  "main": "app.ts",
   "scripts": {
-    "start:dev": "ts-node-dev src/server.ts",
-    "start:prod": "tsc && node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "ts-node-dev src/app.ts",
+    "start:prod": "tsc && node dist/app.js",
+    "test": "jest --silent",
     "build": "tsc"
   },
   "keywords": [],
@@ -20,8 +20,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.6",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
