--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "app.ts",
   "scripts": {
     "start:dev": "ts-node-dev src/app.ts",
-    "start:prod": "tsc && node dist/app.js",
+    "start:prod": "tsc --build --noEmit false && node dist/app.js",
     "test": "jest --silent",
-    "build": "tsc"
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "@gogicha007",
